// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> renders correctly 1`] = `
<div
  style="width:100%;height:100%"
/>
`;

exports[`<Image /> renders correctly 2`] = `
<div
  class="qux"
/>
`;
